--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
         <button class="reset" id="reset">Reset</button><br />
         <input type="text" id="input" placeholder="Enter Pokemon Name" />
       </div>
-      <div class="card-section">
+      <div class="card-section" id="card">
         <div class="card">
-            <div class="front-card">
-                <div class="slNo">#<span id="slNo">1</span></div>
-                <img id="img" src="" alt="">
-                <h3 id="name">Dragon</h3>
-                <h6 id="value">Value</h6>
-            </div>
-            <div class="back-card">
-                <img src="" alt="">
-                <h3 id="name">Dragon</h3>
-                <p class="utilities">Uitilities:</p>
-            </div>
+          <div class="front-card">
+            <div class="slNo">#<span id="slNo">1</span></div>
+            <img id="img" src="./download (2).jpg" alt="" />
+            <h3 id="name">Bulbasaur</h3>
+            <h6 id="value">Grass</h6>
+          </div>
+          <div class="back-card">
+            <img src="" alt="" />
+            <h3 id="name">Dragon</h3>
+            <p class="utilities">Uitilities:</p>
+          </div>
+        </div>
       </div>
-     
     </main>
     <script src="script.js"></script>
   </body>
