--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>GeeksterMon</h1>
       <div class="container">
         <select name="" id="select">
-          <option value="Types" id="types">Types</option>
+          <option value="Types" id="types">All</option>
           <option value="Grass" id="option-1">Grass</option>
           <option value="Fire" id="option-2">Fire</option>
           <option value="Water" id="option-3">Water</option>
@@ -29,7 +29,7 @@
           <option value="Dragon" id="option-16">Dragon</option>
         </select>
         <button id="filter" class="filter">Filter By Type</button>
-        <button class="reset" id="reset" target="index.html">Reset</button><br />
+        <button class="reset" id="reset" src="index.html">Reset</button><br />
         <input type="text" id="input" placeholder="Enter Pokemon Name" />
       </div>
       <div class="card-section" id="card">
